fix scaleLine position mobile/desktop. todo: needs a refresh from desktop to mobile

--- a/src/app/pages/portal/portal.component.scss
+++ b/src/app/pages/portal/portal.component.scss
@@ -224,15 +224,25 @@ igo-map-browser.toast-offset-attribution
   }
 }
 
+/*SCALE*/ 
+
+::ng-deep .ol-scale-line-inner {
+  border: 1px solid black;
+  color: black;
+  border-top: none;
+  order: 1;
+}
+
 ::ng-deep div.ol-scale-line {
-  display: block!important;
   position: absolute!important;
-  top: 2px!important;
+  display: block;
+  top: 20px!important;
+  bottom: unset;
   left: 10px!important;
-  bottom: unset!important;
   background: unset!important;
   color: black;
-  z-index: 9999!important;
+  z-index: 5!important;
+  transform: unset!important;
 }
 
 ::ng-deep .olControlScaleLine {
